--- a/assets/css/wallet/tether-wallet.css
+++ b/assets/css/wallet/tether-wallet.css
@@ -181,3 +181,36 @@
     font-size: 16px;
     margin-left: 15px;
 }
+
+div.main {
+    height: 400px;
+    font-size: 18px;
+}
+
+.img-qr {
+    width: 300px;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+}
+
+div.text {
+    text-align: center;
+}
+
+i.fa-regular.fa-clipboard {
+    display: inline-block;
+    margin-right: 5px;
+}
+
+i.fa-regular.fa-clipboard:hover {
+    cursor: pointer;
+    color: black;
+}
+
+div.aaddress {
+    color: #808080;
+    margin-top: 5px;
+    text-align: center;
+}
