--- a/assets/css/wallet/wallet.css
+++ b/assets/css/wallet/wallet.css
@@ -146,10 +146,49 @@
 
 .page .balances .balances-table .balances-table-body .balances-table-row .balances-table-cell-body .cell-body-div-action .cell-body-div-action-text {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 .page .balances .balances-table .balances-table-body .balances-table-row .balances-table-cell-body .cell-body-div-action .cell-body-div-action-text .action-name {
     cursor: pointer;
     font-size: 16px;
+}
+
+.page .balances .balances-table .balances-table-body .balances-table-row .balances-table-cell-body .cell-body-div-action .cell-body-div-action-text .action-name.deposit-btc, .action-name.deposit-eth, .action-name.deposit-usdt {
+    margin-right: 20px;
+    color: #F99A23;
+}
+
+/* modal ek css*/
+div.main {
+    height: 400px;
+    font-size: 18px;
+}
+
+.img-qr {
+    width: 300px;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+}
+
+div.text {
+    text-align: center;
+}
+
+i.fa-regular.fa-clipboard {
+    display: inline-block;
+    margin-right: 5px;
+}
+
+i.fa-regular.fa-clipboard:hover {
+    cursor: pointer;
+    color: black;
+}
+
+div.aaddress {
+    color: #808080;
+    margin-top: 5px;
+    text-align: center;
 }
