--- a/assets/css/payment-tools/payment-buttons.css
+++ b/assets/css/payment-tools/payment-buttons.css
@@ -1,33 +1,37 @@
 .payment-tools {
 
-    margin-top: 100px !important;
+    margin-top: 50px !important;
 }
 
 .checkout-button {
     padding: 10px 50px;
     display: flex;
     justify-content: space-between;
-    border: 1px solid;
+    border-bottom: 1px solid rgba(0, 0, 0, .4);
 }
 
 .input-div {
     display: flex;
-    border: 1px solid;
     flex-direction: column;
 }
 
 .input-div h3 {
     margin-bottom: 15px;
+    text-align: left;
+    padding: 10px;
+    color: #f99a23;
 }
 
 label {
     text-align: left;
     padding: 10px;
+    color: #3A3A3A;
+    font-size: 14px;
 }
 
 .inp-default-price {
     text-align: left;
-    padding: 10px;
+    padding: 3px 10px;
 }
 
 .inp-default-price input {
@@ -37,10 +41,42 @@ label {
     border: none;
     border-radius: 5px;
     padding: 10px;
-    font-size: 16px;
+    font-size: 14px;
+    background-color: #0001;
+}
+
+#description-label {
+    margin-top: 10px;
+}
+
+.inp-checkout-description {
+    text-align: left;
+    padding: 3px 10px;
+}
+
+.inp-checkout-description input {
+    height: 40px;
+    width: 400px;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 14px;
     background-color: #0001;
 }
 
 .text1 {
-    border: 1px solid;
+    margin-left: 100px;
+    font-size: 14px;
+    text-align: left;
+    line-height: 1.6;
+    color: #3A3A3A;
+}
+
+.text1 p#p1 {
+    margin-top: 70px;
+}
+
+.text1 p#p2 {
+    margin-top: 20px;
 }
