--- a/assets/css/payment-tools/payment-buttons.css
+++ b/assets/css/payment-tools/payment-buttons.css
@@ -45,16 +45,16 @@ label {
     background-color: #0001;
 }
 
-#description-label {
+#order-id-label {
     margin-top: 10px;
 }
 
-.inp-checkout-description {
+.inp-order-id {
     text-align: left;
     padding: 3px 10px;
 }
 
-.inp-checkout-description input {
+.inp-order-id input {
     height: 40px;
     width: 400px;
     outline: none;
@@ -79,4 +79,41 @@ label {
 
 .text1 p#p2 {
     margin-top: 20px;
+}
+
+.code {
+    margin-top: 50px;
+    padding: 10px 50px;
+    border: 1px solid;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid rgba(0, 0, 0, .4);
+}
+
+.generated-code {
+    border: 1px solid;
+}
+
+.generated-code h3 {
+    text-align: left;
+    padding: 10px;
+    color: #f99a23;
+}
+
+.generated-code p {
+    text-align: left;
+    font-size: 14px;
+    padding: 10px;
+    color: #3A3A3A;
+}
+
+.in-code {
+    width: 846px;
+    height: 153;
+    border: 1px solid;
+}
+
+.code-button {
+    border: 1px solid;
+    /*846,153*/
 }
